[package]
name = "croc"
version = "0.1.0"
authors = ["Asaf Fisher <asaffisher@icloud.com>"]
edition = "2018"

[lib]
name = "crypto"
path = "src/crypto/lib.rs"

[[bin]]
name = "croc"
path = "src/main.rs"

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.2"
anyhow = "1.0.75"
num-bigint-dig = "0.8.4"
num-traits = "0.2"
once_cell = "1.18.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_repr = "0.1.16"
serde_with = "3.3.0"
sha2 = "0.10.7"
thiserror = "1.0.48"
