[package]
name = "croc"
version = "0.1.0"
authors = ["Asaf Fisher <asaffisher@icloud.com>"]
edition = "2018"

[lib]
name = "crypto"
path = "src/crypto/lib.rs"

[[bin]]
name = "croc"
path = "src/main.rs"

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.2"
anyhow = "1.0.75"
base64 = "0.21.4"
byteorder = "1.4.3"
chrono = "0.4.31"
clap = "4.4.0"
default-net = "0.17.0"
hex = "0.4.3"
inquire = "0.6.2"
log = "0.4.20"
num-bigint-dig = "0.8.4"
num-traits = "0.2"
once_cell = "1.18.0"
pbkdf2 = "0.12.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = {version = "1.0.105", features = ["arbitrary_precision"]}
serde_repr = "0.1.16"
serde_with = "3.3.0"
sha2 = "0.10.7"
tempfile = "3.9.0"
thiserror = "1.0.48"
tokio = {version = "1.35.0", features = ["net", "io-util", "full"]}

[dev-dependencies]
tempfile = "3.9.0"
